Name:                gitit-to-blog
Version:             0.1.4
Synopsis:            convert a gitit-friendly markdown page to HTML with various transformations
Category:            utility
Cabal-Version:       >= 1.6
Description:
  Convert a gitit-friendly markdown page to HTML, including various transformations
  .
  Also has some pieces for transfering content from a gitit wiki to a blog,
  but in disarray.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2010-2013 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/gitit-to-blog.git

-- executable: trim-gitit-post
-- Hs-Source-Dirs:      .
-- Main-is:             Trim.hs
-- build-depends:       base<5, text, TypeCompose >=0.8.0, haxr, utf8-string

-- executable: get-gitit-post
-- Hs-Source-Dirs:      .
-- Main-is:             Main.hs
-- build-depends:       base<5, download-curl, TypeCompose, haxr

-- trim-gitit-post and get-gitit-post both lead to version conflicts:
-- 
--   cabal: dependencies conflict: fix-symbols-gitit-0.0.3 requires HaXml ==1.13.3
--   however
--   HaXml-1.13.3 was excluded because haxr-3000.7 requires HaXml ==1.20.*

Library
  Hs-Source-Dirs:      src
  Exposed-modules:     Conal.Blogify
  build-depends:       base<5, containers, pandoc >= 1.11.1, fix-symbols-gitit >= 0.1.1, gitit-birdtrack-shift, gitit-comment, ordinal-gitit-plugin

Executable blogify
  Hs-Source-Dirs:      src
  Main-is:             Main.hs
  Other-Modules:       Paths_gitit_to_blog
  build-depends:       base<5, containers, pandoc >= 1.11.1, fix-symbols-gitit >= 0.1.1, gitit-birdtrack-shift, gitit-comment, ordinal-gitit-plugin

-- Data-Files:
--                  data/MathMLinHTML.js
