Name:                gitit-to-blog
Version:             0.2.0
Synopsis:            Convert a gitit-friendly markdown page to HTML with various transformations
Category:            text
Cabal-Version:       >= 1.8
Description:
  Convert a gitit-friendly markdown page to HTML, including various transformations
  .
  Also has some pieces for transfering content from a gitit wiki to a blog,
  but in disarray.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2010-2016 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/gitit-to-blog.git

Library
  Hs-Source-Dirs:      src
  Exposed-modules:     Network.Gitit.Plugin.FixSymbols
                       Network.Gitit.Plugin.ReviveATX
                       Network.Gitit.Plugin.BirdtrackShift
                       Network.Gitit.Plugin.Comment
                       Network.Gitit.Plugin.Ordinal
                       Network.Gitit.Plugin.ListNoPara

  build-depends:       base<5
                     , containers
                     , data-default >= 0.6.0
                     , gitit >= 0.12.1.1
                     , mtl
                     , options >= 1.2.1.1
                     , pandoc >= 1.11.1
                     , string-qq
                     , text
                     , yaml

Executable blogify
  Hs-Source-Dirs:      src
  Main-is:             Main.hs
  Other-Modules:       Paths_gitit_to_blog
                       Network.Gitit.Plugin.BirdtrackShift
                       Network.Gitit.Plugin.Comment
                       Network.Gitit.Plugin.FixSymbols
                       Network.Gitit.Plugin.ListNoPara
                       Network.Gitit.Plugin.Ordinal
                       Network.Gitit.Plugin.ReviveATX
  build-depends:       base<5
                     , containers
                     , mtl
                     , data-default >= 0.6.0
                     , gitit >= 0.12.1.1
                     , options >= 1.2.1.1
                     , pandoc >= 1.11.1
                     , text
                     , yaml
                     , gitit-to-blog
